compiler/fir/analysis-tests/testData/resolve/fakeRecursiveTypealias.kt
import incorrect.directory.Your

typealias My = <!OTHER_ERROR!>incorrect.directory.My<!>

typealias Your = <!OTHER_ERROR!>Your<!>